<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="register">lol phonar</string>
    <string name="app_name">Phonar</string>
    <string name="unregister">wtf phonar</string>
    <string name="callback">In callback</string>
    <string name="ar_name">Augmented Reality</string>
    <string name="phonar">phonar someone :O</string>
    <string name="poll">poll</string>
    <string name="test_ar">Test AR View</string>
    <string name="map_name">View Friends on Map</string>
    <string name="contacts_name">Choose a contact to Phonar</string>
    <string name="download_error">Download error</string>
    <string name="download_received">Download received</string>
    <string name="accept">Accept</string>
</resources>
