<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<Button
	    android:id="@+id/register_button"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/register"
	/>
	<Button
	    android:id="@+id/unregister_button"
	    android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/unregister"
    />
    <Button
        android:id="@+id/poll_button"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/poll"
    />
    <Button
        android:id="@+id/ar_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ar_name"
    />
    <Button
        android:id="@+id/map_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_name"
    />
</LinearLayout>
